[gd_scene load_steps=10 format=3 uid="uid://dc4vl3d4kyp4u"]

[ext_resource type="Script" path="res://player.gd" id="1_vyfg8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_26pvw"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wdeax"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xdfu2"]
height = 1.0

[sub_resource type="Animation" id="Animation_wtik0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_pivot/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ouqm2"]
resource_name = "crouch_idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_pivot/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.45, 0)]
}

[sub_resource type="Animation" id="Animation_wlutn"]
resource_name = "standing_idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cam_pivot/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kgy05"]
_data = {
"RESET": SubResource("Animation_wtik0"),
"crouch_idle": SubResource("Animation_ouqm2"),
"standing_idle": SubResource("Animation_wlutn")
}

[sub_resource type="CapsuleMesh" id="CapsuleMesh_c7j64"]

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_vyfg8")

[node name="standing_col" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_26pvw")

[node name="crouching_col" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.501533, 0)
shape = SubResource("SphereShape3D_wdeax")

[node name="cam_pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.56106, 0)

[node name="Camera3D" type="Camera3D" parent="cam_pivot"]

[node name="all_raycast" type="Node3D" parent="."]

[node name="top_head" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 1, 0)

[node name="check_L" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(4.37114e-08, 1, -8.74228e-08, 1, -4.37114e-08, 0, -3.82137e-15, -8.74228e-08, -1, -0.500822, 0.155, 0)

[node name="check_R" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.470772, 0.155, 0)

[node name="check_F" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0.120736, 0.155, -0.494644)

[node name="face" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(1.19418e-15, 2.73196e-08, 0.625, 0.625, -2.73196e-08, 0, 2.73196e-08, 0.625, -2.73196e-08, 0, 0.610726, 0)

[node name="new_pos" type="RayCast3D" parent="all_raycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00786108, 1.22902, -1.21322)

[node name="above_head" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="above_head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5036, 0)
shape = SubResource("CylinderShape3D_xdfu2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kgy05")
}

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_c7j64")

[connection signal="body_entered" from="above_head" to="." method="_on_above_head_body_entered"]
[connection signal="body_exited" from="above_head" to="." method="_on_above_head_body_exited"]
